<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/picLayout"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/contactProPic"
                android:src="@drawable/default_profile_display_pic"
                android:layout_centerInParent="true"
                app:civ_border_color="@color/colorPrimaryDark"
                app:civ_border_width="1dp"
                app:civ_border_overlay="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                tools:ignore="RtlSymmetry"
                android:layout_toStartOf="@+id/handler"
                android:layout_gravity="center"
                android:id="@+id/nameLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/contactName"
                    android:text="@string/contact_name"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/personalNumber"
                    android:text="@string/contact_number"
                    android:textStyle="italic"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    android:visibility="visible"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/handler">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invite"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/invitationBTN"
                    android:padding="10dp"
                    android:background="@drawable/rounded_edittext"
                    android:layout_centerVertical="true"
                    android:visibility="visible" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>