<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GettingStarted.VerifyPhoneActivity"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/vinyl"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:tint="@color/colorWhite"
                android:src="@drawable/dynasty_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification_request"
                android:textStyle="italic"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/round_white">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:id="@+id/phoneNoTIL"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/verifyBTN">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/verification"
                        android:textColorHint="@color/colorBlack"
                        android:textColor="@color/colorBlack"
                        android:paddingStart="10dp"
                        android:layout_gravity="center"
                        android:id="@+id/verificationCode"
                        android:inputType="number"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry"
                        android:background="@null"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/verifyBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/verify"
                    android:background="@drawable/verify_background_btn"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:padding="10dp"
                    android:layout_margin="8dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    tools:ignore="UnusedAttribute"
                    android:layout_alignParentEnd="true"/>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="25dp"
                    android:id="@+id/verifyLoader"
                    android:visibility="gone"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:id="@+id/resendOTP"
                android:textSize="12sp"
                android:textStyle="italic|bold"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>