<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GettingStarted.MainActivity"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/vinyl"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:src="@drawable/dynasty_logo"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                app:tint="@color/colorWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:padding="10dp"
                android:layout_below="@+id/vinyl">

                <LinearLayout
                    android:id="@+id/numberLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/round_white">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/codeTIL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        app:ccp_textSize="15sp"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_showFlag="true"
                        app:ccp_showNameCode="false"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:id="@+id/phoneNoTIL">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/input_number"
                            android:textColorHint="@color/colorWhite"
                            android:textColor="@color/colorBlack"
                            android:id="@+id/phoneNumberArea"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:inputType="number"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:singleLine="true"
                            android:background="@null"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/registerBTN"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/round_white"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sms_data_rates"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:layout_margin="10dp"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>