<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GettingStarted.InAppActivities.SavedPostsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/savedPostsToolbar"
        android:background="@color/colorPrimaryDark"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:id="@+id/savedPostsBackBTN"
            android:tint="@color/colorWhite"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Saved Posts"
            android:layout_toEndOf="@+id/savedPostsBackBTN"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_regular"
            android:textStyle="bold"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:id="@+id/savedPostsHeading"
            android:visibility="visible"/>

        <!--<androidx.appcompat.widget.SearchView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SP_SearchView"
            app:queryHint="Search"
            app:searchIcon="@drawable/ic_search_black_24dp"
            app:closeIcon="@drawable/ic_close_black_24dp"
            app:queryBackground="@drawable/round_white"
            android:layout_alignParentEnd="true"
            android:gravity="end"/>-->

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/mediaHeading">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/saved_media"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/savedMediaHeading"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/savedMediaHeading"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:id="@+id/savedMediaNo"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/see_more"
                    android:textColor="@color/colorBlack"
                    android:padding="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/viewSavedMedia"/>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/savedMediaRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                android:nestedScrollingEnabled="false"
                android:layout_below="@+id/mediaHeading"
                tools:ignore="RtlSymmetry,UnusedAttribute" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_below="@+id/savedMediaRecycler"
                android:id="@+id/postsHeading"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/saved_posts"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:id="@+id/savedPostsHead"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/savedPostsHead"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:id="@+id/savedPostsNo"
                    android:textColor="@color/colorBlack"/>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/savedPostsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:layout_below="@+id/postsHeading"
                android:clipToPadding="false"
                tools:ignore="UnusedAttribute" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>